ADM-681:[backend]feat: add delete expired metrics data ready method